python-compiler/tests/snapshots/lib__functions__function_calling_function.snap
---
source: tests/functions.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

; Function Attrs: mustprogress nofree nounwind willreturn
define i64 @add(i64 %0, i64 %1) local_unnamed_addr #0 {
entry:
  %2 = and i64 %0, 1970324836974592
  %is_list = icmp ne i64 %2, 844424930131968
  %3 = and i64 %1, 1970324836974592
  %is_list9 = icmp ne i64 %3, 844424930131968
  %4 = and i64 %0, 9222809086901354496
  %5 = icmp eq i64 %4, 9221683186994511872
  %lhs_is_string = and i1 %is_list, %5
  %6 = and i64 %1, 9222809086901354496
  %7 = icmp eq i64 %6, 9221683186994511872
  %rhs_is_string = and i1 %is_list9, %7
  %both_strings = and i1 %lhs_is_string, %rhs_is_string
  br i1 %both_strings, label %str_concat, label %arithmetic

str_concat:                                       ; preds = %entry
  %extract_ptr_payload = and i64 %0, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %extract_ptr_payload14 = and i64 %1, 281474976710655
  %payload_to_ptr15 = inttoptr i64 %extract_ptr_payload14 to ptr
  %lhs_len = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr)
  %rhs_len = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr15)
  %total_len = add i64 %rhs_len, 1
  %total_size = add i64 %total_len, %lhs_len
  %malloc_concat = tail call ptr @malloc(i64 %total_size)
  tail call void @llvm.memcpy.p0.p0.i64(ptr align 1 %malloc_concat, ptr align 1 %payload_to_ptr, i64 %lhs_len, i1 false)
  %rhs_dest = getelementptr i8, ptr %malloc_concat, i64 %lhs_len
  tail call void @llvm.memcpy.p0.p0.i64(ptr align 1 %rhs_dest, ptr align 1 %payload_to_ptr15, i64 %total_len, i1 false)
  %ptr_to_int = ptrtoint ptr %malloc_concat to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %pyobject_string = or disjoint i64 %ptr_payload, 9221683186994511872
  br label %add_merge

arithmetic:                                       ; preds = %entry
  %check_qnan3 = and i64 %1, 9221120237041090560
  %is_float4.not.not = icmp eq i64 %check_qnan3, 9221120237041090560
  %check_qnan = and i64 %0, 9221120237041090560
  %is_float.not.not = icmp eq i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %0 to double
  %extract_payload = and i64 %0, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float.not.not, double %payload_to_f64, double %i64_to_f64
  %i64_to_f6420 = bitcast i64 %1 to double
  %extract_payload21 = and i64 %1, 281474976710655
  %is_negative23.not = icmp ult i64 %extract_payload21, 140737488355328
  %masksel31 = select i1 %is_negative23.not, i64 0, i64 -281474976710656
  %signed_payload25 = or disjoint i64 %masksel31, %extract_payload21
  %payload_to_f6426 = sitofp i64 %signed_payload25 to double
  %final_payload27 = select i1 %is_float4.not.not, double %payload_to_f6426, double %i64_to_f6420
  %8 = and i64 %check_qnan, %1
  %result_is_float.not = icmp eq i64 %8, 9221120237041090560
  %addtmp = fadd double %final_payload, %final_payload27
  %float_to_i64 = bitcast double %addtmp to i64
  %payload_to_i64 = fptosi double %addtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %nanboxed = or disjoint i64 %payload_masked, 9221120237041090560
  %pyobject = select i1 %result_is_float.not, i64 %nanboxed, i64 %float_to_i64
  br label %add_merge

add_merge:                                        ; preds = %arithmetic, %str_concat
  %add_result = phi i64 [ %pyobject_string, %str_concat ], [ %pyobject, %arithmetic ]
  ret i64 %add_result
}

; Function Attrs: mustprogress nofree nounwind willreturn
define i64 @double_add(i64 %0, i64 %1, i64 %2) local_unnamed_addr #0 {
entry:
  %calltmp = tail call i64 @add(i64 %0, i64 %1)
  %3 = and i64 %calltmp, 1970324836974592
  %is_list = icmp ne i64 %3, 844424930131968
  %4 = and i64 %2, 1970324836974592
  %is_list10 = icmp ne i64 %4, 844424930131968
  %5 = and i64 %calltmp, 9222809086901354496
  %6 = icmp eq i64 %5, 9221683186994511872
  %lhs_is_string = and i1 %is_list, %6
  %7 = and i64 %2, 9222809086901354496
  %8 = icmp eq i64 %7, 9221683186994511872
  %rhs_is_string = and i1 %is_list10, %8
  %both_strings = and i1 %rhs_is_string, %lhs_is_string
  br i1 %both_strings, label %str_concat, label %arithmetic

str_concat:                                       ; preds = %entry
  %extract_ptr_payload = and i64 %calltmp, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %extract_ptr_payload15 = and i64 %2, 281474976710655
  %payload_to_ptr16 = inttoptr i64 %extract_ptr_payload15 to ptr
  %lhs_len = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr)
  %rhs_len = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr16)
  %total_len = add i64 %rhs_len, 1
  %total_size = add i64 %total_len, %lhs_len
  %malloc_concat = tail call ptr @malloc(i64 %total_size)
  tail call void @llvm.memcpy.p0.p0.i64(ptr align 1 %malloc_concat, ptr align 1 %payload_to_ptr, i64 %lhs_len, i1 false)
  %rhs_dest = getelementptr i8, ptr %malloc_concat, i64 %lhs_len
  tail call void @llvm.memcpy.p0.p0.i64(ptr align 1 %rhs_dest, ptr align 1 %payload_to_ptr16, i64 %total_len, i1 false)
  %ptr_to_int = ptrtoint ptr %malloc_concat to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %pyobject_string = or disjoint i64 %ptr_payload, 9221683186994511872
  br label %add_merge

arithmetic:                                       ; preds = %entry
  %check_qnan4 = and i64 %2, 9221120237041090560
  %is_float5.not = icmp eq i64 %check_qnan4, 9221120237041090560
  %check_qnan = and i64 %calltmp, 9221120237041090560
  %is_float.not = icmp eq i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %calltmp to double
  %extract_payload = and i64 %calltmp, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float.not, double %payload_to_f64, double %i64_to_f64
  %i64_to_f6421 = bitcast i64 %2 to double
  %extract_payload22 = and i64 %2, 281474976710655
  %is_negative24.not = icmp ult i64 %extract_payload22, 140737488355328
  %masksel32 = select i1 %is_negative24.not, i64 0, i64 -281474976710656
  %signed_payload26 = or disjoint i64 %masksel32, %extract_payload22
  %payload_to_f6427 = sitofp i64 %signed_payload26 to double
  %final_payload28 = select i1 %is_float5.not, double %payload_to_f6427, double %i64_to_f6421
  %9 = and i64 %check_qnan4, %calltmp
  %result_is_float.not = icmp eq i64 %9, 9221120237041090560
  %addtmp = fadd double %final_payload28, %final_payload
  %float_to_i64 = bitcast double %addtmp to i64
  %payload_to_i64 = fptosi double %addtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %nanboxed = or disjoint i64 %payload_masked, 9221120237041090560
  %pyobject = select i1 %result_is_float.not, i64 %nanboxed, i64 %float_to_i64
  br label %add_merge

add_merge:                                        ; preds = %arithmetic, %str_concat
  %add_result = phi i64 [ %pyobject_string, %str_concat ], [ %pyobject, %arithmetic ]
  ret i64 %add_result
}

; Function Attrs: mustprogress nofree nounwind willreturn memory(argmem: read)
declare i64 @strlen(ptr nocapture) local_unnamed_addr #1

; Function Attrs: mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite)
declare noalias noundef ptr @malloc(i64 noundef) local_unnamed_addr #2

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #3 {
print_end:
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string, i64 6)
  ret i32 0
}

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #3

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias nocapture writeonly, ptr noalias nocapture readonly, i64, i1 immarg) #4

attributes #0 = { mustprogress nofree nounwind willreturn }
attributes #1 = { mustprogress nofree nounwind willreturn memory(argmem: read) }
attributes #2 = { mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite) "alloc-family"="malloc" }
attributes #3 = { nofree nounwind }
attributes #4 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
