python-compiler/tests/snapshots/lib__functions__function_with_variable.snap
---
source: tests/functions.rs
assertion_line: 85
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

define double @compute(double %0) {
entry:
  %y = alloca double, align 8
  %x = alloca double, align 8
  store double %0, ptr %x, align 8
  %x1 = load double, ptr %x, align 8
  %addtmp = fadd double %x1, 1.000000e+01
  store double %addtmp, ptr %y, align 8
  %y2 = load double, ptr %y, align 8
  %multmp = fmul double %y2, 2.000000e+00
  ret double %multmp
}

define i32 @main() {
entry:
  %calltmp = call double @compute(double 5.000000e+00)
  %printf_call = call i32 (ptr, ...) @printf(ptr @float_format_string, double %calltmp)
  ret i32 0
}

declare i32 @printf(ptr, ...)
