python-compiler/tests/snapshots/lib__functions__multiple_functions.snap
---
source: tests/functions.rs
assertion_line: 110
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

define i64 @add(i64 %0, i64 %1) {
entry:
  %b = alloca i64, align 8
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  store i64 %1, ptr %b, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %addtmp = add i64 %a1, %b2
  ret i64 %addtmp
}

define i64 @subtract(i64 %0, i64 %1) {
entry:
  %b = alloca i64, align 8
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  store i64 %1, ptr %b, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %subtmp = sub i64 %a1, %b2
  ret i64 %subtmp
}

define i64 @multiply(i64 %0, i64 %1) {
entry:
  %b = alloca i64, align 8
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  store i64 %1, ptr %b, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %multmp = mul i64 %a1, %b2
  ret i64 %multmp
}

define i32 @main() {
entry:
  %z = alloca i64, align 8
  %y = alloca i64, align 8
  %x = alloca i64, align 8
  %calltmp = call i64 @add(i64 10, i64 5)
  store i64 %calltmp, ptr %x, align 4
  %x1 = load i64, ptr %x, align 4
  %calltmp2 = call i64 @subtract(i64 %x1, i64 3)
  store i64 %calltmp2, ptr %y, align 4
  %y3 = load i64, ptr %y, align 4
  %calltmp4 = call i64 @multiply(i64 %y3, i64 2)
  store i64 %calltmp4, ptr %z, align 4
  %z5 = load i64, ptr %z, align 4
  %printf_call = call i32 (ptr, ...) @printf(ptr @format_string, i64 %z5)
  ret i32 0
}

declare i32 @printf(ptr, ...)
